syntax = "proto3";

package examplecom;

message PrimitiveMessageV3 {
    double my_double = 1;
    float my_float = 2;
    int32 my_int32 = 3;
    int64 my_int64 = 4;
    uint32 my_uint32 = 5;
    uint64 my_uint64 = 6;
    sint32 my_sint32 = 7;
    sint64 my_sint64 = 8;
    fixed32 my_fixed32 = 9;
    fixed64 my_fixed64 = 10;
    sfixed32 my_sfixed32 = 11;
    sfixed64 my_sfixed64 = 12;
    bool my_bool = 13;
    string my_string = 14;
    bytes my_bytes = 15;

    int32 my_NUMBER = 16;

    optional double opt_double = 17;
    optional float opt_float = 18;
    optional int32 opt_int32 = 19;
    optional int64 opt_int64 = 20;
    optional uint32 opt_uint32 = 21;
    optional uint64 opt_uint64 = 22;
    optional sint32 opt_sint32 = 23;
    optional sint64 opt_sint64 = 24;
    optional fixed32 opt_fixed32 = 25;
    optional fixed64 opt_fixed64 = 26;
    optional sfixed32 opt_sfixed32 = 27;
    optional sfixed64 opt_sfixed64 = 28;
    optional bool opt_bool = 29;
    optional string opt_string = 30;
    optional bytes opt_bytes = 31;

    optional int32 opt_NUMBER = 32;
}
